--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   "author": "Sudeep Sakil Ripon",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
