--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "author": "Sudeep Sakil Ripon",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "pg": "^8.13.1",
